--- a/src/App.css
+++ b/src/App.css
@@ -249,7 +249,16 @@
     color: white;
     margin-bottom: 30px;
     width: 100%;
-    font-size: 2.3em;;
+    font-size: 2.3rem;;
+  }
+
+  
+  .error {
+    text-align: center;
+    color: white;
+    margin-bottom: 30px;
+    width: 100%;
+    font-size: 1.3rem;;
   }
   
   .button {
